verif/test/deca/context/invalid/initialization/assiging-float-to-int-verif.res
src/test/deca/context/invalid/initialization/assiging-float-to-int.deca:12:8: Cannot assign expression of type 'float' to a variable of type 'int'
